test/test_units/test_kclvm/test_types/invalid_test_data/type_annotation/type_annotation_5.k
_a: str = "1"
_a: int = 1
